<resources>
    <string name="app_name">VCS solution</string>
    <string name="spinner_title">Drop Down List</string>
    <string name="radio_male">Yes</string>
    <string name="radio_female">No</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="mars">Simple application that shows how to use marquee, with a long text hai man how are u????????? u are a super man</string>
    <string name="menu_settings">Settings</string>
    <string name="phone">Phone</string>
    <string name="computer">Computer</string>
    <string name="gamepad">Gamepad</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="email">EMail</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_view_item_1">Main Activity</string>
    <string name="navigation_view_item_2">Viral Android</string>
    <string name="navigation_view_item_3">Google</string>
    <string name="navigation_view_item_4">Viral Android</string>
    <string name="navigation_view_item_5">Google</string>
    <string name="navigation_view_item_6">Viral Android</string>
    <string name="navigation_view_category_1">Sliding Menu</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name On Card</string>
    <string name="expires">Expiry</string>
    <string name="cvv">CVV</string>
    <string name="store_card_check">Do you want to store this card</string>
    <string name="card_name">Card Name</string>
    <string name="pay_now">Pay Now</string>
    <string name="title_activity_credit_card_fragment">CreditCardFragmentActivity</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="hello">Hello World</string>
    <string name="external_dir">GetSignature</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
</resources>
