<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:touchscreenBlocksFocus="false">

    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />

    </RadioGroup>

    <EditText
        android:id="@+id/editText1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:maxLength="10"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/bright_foreground_inverse_material_dark"
        android:textSize="20sp"
        android:singleLine="true"
        android:textIsSelectable="false"
        android:padding="10dp"
        android:nextFocusDown="@+id/editText2"
        android:onClick="removeerr"
        android:hint="text only"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:maxLength="15"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/bright_foreground_inverse_material_dark"
        android:textSize="20sp"
        android:singleLine="true"
        android:textIsSelectable="false"
        android:padding="10dp"
        android:inputType="number"
        android:nextFocusDown="@+id/spinner"
        android:hint="Number only"/>

   <!--<Button-->
       <!--android:layout_width="100dp"-->
       <!--android:layout_height="wrap_content"-->
       <!--android:layout_marginTop="10dp"-->
       <!--android:layout_gravity="center_horizontal"-->
       <!--android:gravity="top|bottom|center_horizontal"-->
       <!--android:background="#e884c7"-->
       <!--android:clickable="true"-->
       <!--android:id="@+id/btnDisplay"-->
       <!--android:onClick="displayButton"-->
       <!--android:text="Display" />-->

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/spinner"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:focusable="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_corner" />

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/yes"
        android:id="@+id/checkbox1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:buttonTint="@color/colorPrimary"
        android:textSize="20sp"/>

    <CheckBox
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/no"
        android:id="@+id/checkbox2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:buttonTint="@color/colorPrimary"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mywidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:freezesText="true"
        android:gravity="center_horizontal"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:scrollHorizontally="true"
        android:shadowColor="#FF0000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/mars"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <!--<Button-->
        <!--android:id="@+id/btnChangeDate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Change Date" />-->

    <!--<TextView-->
        <!--android:id="@+id/lblDate"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Current Date (M-D-YYYY): "-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="datebtn"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--<DatePicker-->
        <!--android:id="@+id/dpResult"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="loadImagefromGallery"
        android:background="@drawable/imgbackground">
    </ImageView>

    <!--<ImageView-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:background="@drawable/imgbackground"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:onClick="camerabutton" />-->

    <!--<Button-->
        <!--android:id="@+id/buttonLoadPicture"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="0"-->
        <!--android:onClick="loadImagefromGallery"-->
        <!--android:text="Load Picture" >-->
    <!--</Button>-->

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="top|bottom|center_horizontal"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="BackButton"
        android:textColor="@color/abc_secondary_text_material_dark" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="top|bottom|center_horizontal"
        android:text="Merge Images"
        android:id="@+id/mergeimage"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="mergeclick"
        android:textColor="@color/abc_secondary_text_material_dark" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="top|bottom|center_horizontal"
        android:text="Send Mail"
        android:id="@+id/sendmail"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="mailsend"
        android:textColor="@color/abc_secondary_text_material_dark" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="top|bottom|center_horizontal"
        android:text="Data Base"
        android:id="@+id/database"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:clickable="true"
        android:onClick="DBclick"
        android:textColor="@color/abc_secondary_text_material_dark" />

</LinearLayout>
    </ScrollView>

